fix options layout shift

--- a/rest-countries-api-with-color-theme-switcher-master/styles/reset.css
+++ b/rest-countries-api-with-color-theme-switcher-master/styles/reset.css
@@ -16,6 +16,10 @@
   font-family: inherit;
 }
 
+option {
+  display: none;
+}
+
 /* 
 Remove list styles on ul, ol elements with a list role, 
 which suggests default styling will be removed 
